tests/functional/data/transpiler/common/errors/loops/bad_structure1.err
bad_structure1.cpp:10:13: error: Mistmatch of [@inner] loops: expected loop inside
   10 |             @inner for (int k = 0; k < 10; ++k) {
      |             ^
